add app installed api
