# backend/api/openapi.yaml
@@ -4469,7 +4469,6 @@ paths:
         required: false
         schema:
           type: string
-
       responses:
         "200":
           content:
@@ -4642,7 +4641,75 @@ paths:
       - Applications
       x-swagger-router-controller: Applications
       x-openapi-router-controller: ApplicationsController
-      x-openapi-router-service: ApplicationsService          
+      x-openapi-router-service: ApplicationsService
+  /applications/installed:
+    get:
+      operationId: applicationsInstalledGET
+      parameters:
+      - description: Devices appIdentification installed on
+        explode: true
+        in: query
+        name: offset
+        required: false
+        schema:
+          type: integer
+        style: form
+      - description: The numbers of items to return
+        explode: true
+        in: query
+        name: limit
+        required: false
+        schema:
+          type: integer
+        style: form
+      - description: Organization to be filtered by
+        explode: true
+        in: query
+        name: org
+        required: false
+        schema:
+          type: string
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/InstalledApplications'
+                x-content-type: application/json
+          description: Successful operation
+        "401":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: Unauthorized
+        "403":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: Forbidden
+        "500":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: Internal server error
+        default:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: Unexpected error
+      security:
+      - apiKey: []
+      - bearerAuth: []
+      summary: Get all Applications
+      tags:
+      - Applications
+      x-swagger-router-controller: Applications
+      x-openapi-router-controller: ApplicationsController
+      x-openapi-router-service: ApplicationsService
 components:
   responses:
     NotFoundError:
@@ -4785,7 +4852,47 @@ components:
           type: string
         description:
           type: string
-      type: object               
+      type: object
+    InstalledApplications:
+      example:
+        totalNotUpdated: 3
+        devices:
+        - _id: _id
+          updatedAt: Date
+          clients: Client List
+          status: ok
+      properties:
+        totalNotUpdated:
+          type: integer
+        devices:
+          items:
+            $ref: '#/components/schemas/InstalledApplication'
+          type: array
+      type: object
+    InstalledApplication:
+      example:
+        _id: _id
+        updatedAt: Date
+        clients: Client List
+        status: ok
+      properties:
+        _id:
+          maxLength: 24
+          minLength: 24
+          type: string
+        updatedAt:
+          type: string
+        clients:
+          items:
+            type: string
+          type: array
+        status:
+          enum:
+          - ok
+          - install
+          - uninstall
+          type: string
+      type: object
     Account:
       example:
         country: country
